tests/invalid/multiline_partial_indent.nano
..
    description |
        valid content
      invalid indentation after the block
